--- a/index.html
+++ b/index.html
@@ -1,14 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/styles.css">
-    <title>Document</title>
+    <title>Dashboard Project GGMJ</title>
 </head>
+
 <body>
 
-    
-    <script src="./js/clock.js"></script>
+    <div class="clockCard">
+        <div id="clock"></div>
+    </div>
+
+    <div class="weatherCard">
+        <div class="weatherSearch">
+            <input type="text" placeholder="Enter city name" spellcheck="false">
+            <button><img src="./assets/img/searchIcon.png" alt="searchIcon"></button>
+        </div>
+        <div class="error">
+            <p>City not found</p>
+        </div>
+        <div class="weather">
+            <img class="weatherIcon" src="" alt="">
+            <h1 class="temp">Temperature: 23°C</h1>
+            <h4 class="feel">Real Feel: 21°C</h4>
+            <h2 class="city">City: Miami</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="./assets/img/humidity.png" alt="humidityIcon">
+                    <div>
+                        <p class="humidity">78%</p>
+                        <p>Humidity</p>
+                    </div>
+                    <div class="col">
+                        <img src="./assets/img/wind.png" alt="windIcon">
+                        <div>
+                            <p class="wind">25km/h</p>
+                            <p>Wind Speed</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <script src="./js/weather.js"></script>
 </body>
+
 </html>
